# CZItoSVS-Cpp-POC

./: .gitignore  CMakeLists.txt  vcpkg.json
pythonfiles/: tiffreader.py
src/: __main.cpp  main.cpp  stb_impl.cpp
